# AlphaAgents

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alpha_agents/: __init__.py  config.py  daily_review.py  event_linker.py  http_client.py  monitor.py  news_digest.py  notify.py
alpha_agents/agents/: __init__.py  futures.py  geopolitical.py  hooks.py  strategist.py
alpha_agents/data/: __init__.py  db.py  embeddings.py  index_builder.py  report_store.py
alpha_agents/pipeline/: daily_review.py  event_linker.py  monitor.py  source_health.py
alpha_agents/prompts/: futures.md  geopolitical.md  strategist.md
alpha_agents/server/: app.py  events.py
alpha_agents/sources/: eastmoney_live.py  pizzint.py  sec.py  tech_news.py  truthsocial.py  wallstreetcn.py  world_news.py  xcancel.py  xinhua.py
alpha_agents/tools/: __init__.py  cls_telegraph.py  eastmoney_live.py  fed.py  futures_quotes.py  jin10.py  news.py  pboc.py  registry.py  sector.py  server.py  stock_filter.py  stock_search.py  truthsocial.py  wallstreetcn.py  watchlist.py  web_fetch.py  web_search.py  whitehouse.py  world_news.py  xinhua.py
alpha_agents/web/: app.py  events.py
cloudflare/: worker.js
config/: watchlist.json
deploy/cloudflare/: wrangler.toml
docs/superpowers/plans/: 2026-04-02-alpha-agents-impl.md
docs/superpowers/specs/: 2026-04-02-alpha-agents-design.md
scripts/: cc-wrapper.sh
tests/: test_cls_telegraph.py  test_db.py  test_eastmoney_live.py  test_embeddings.py  test_fed.py  test_futures_quotes.py  test_http_client.py  test_index_builder.py  test_jin10.py  test_monitor.py  test_news.py  test_news_digest.py  test_pboc.py  test_sec.py  test_sector.py  test_server.py  test_source_health.py  test_stock_filter.py  test_stock_search.py  test_tech_news.py  test_truthsocial.py  test_wallstreetcn.py  test_watchlist.py  test_whitehouse.py  test_world_news.py  test_xcancel.py  test_xinhua.py
web/: package-lock.json  package.json
web/src/: App.css  App.jsx  index.css
web/src/components/: EventTimeline.jsx  Header.jsx  PipelineFlow.jsx  (+3 more)
(+4 files in other folders)
