[project]
name = "alpha-agents"
version = "0.1.0"
description = "News-driven autonomous stock screening system"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "akshare",
    "baostock",
    "anyio",
    "sentence-transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
alpha-agents = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alpha_agents*"]

[tool.uv]
package = true
