[project]
name = "alpha-agents"
version = "0.1.0"
description = "News-driven autonomous stock screening system"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "akshare",
    "baostock",
    "anyio",
    "chromadb>=1.5.5",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "tiktoken>=0.7.0",
    "trafilatura>=1.8.0",
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
alpha-agents = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alpha_agents*"]

[tool.uv]
package = true
